k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: japan-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: japan-app
  template:
    metadata:
      labels:
        app: japan-app
    spec:
      containers:
      - name: japan-app
        image: japan-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: japan-app-service
spec:
  selector:
    app: japan-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
